🔧 Refactored _printToken method for improved readability and efficiency. 🔐 Implemented secure storage of authentication token using SharedPreferences. 🐛 Fixed potential null pointer exception when retrieving auth token. 🔍 Added debug log to print saved authentication token for troubleshooting purposes.

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   graphql_flutter: ^5.1.2
   getwidget: ^4.0.0
   cupertino_icons: ^1.0.6
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
